RISC-V: compiler/c2/irTests/TestFloat16ScalarOperations.java is failing on riscv64

XMLWordPrintable

    • b13
    • riscv

        Running the test with release build on BPI-F3:

        $ make test TEST="test/hotspot/jtreg/compiler/c2/irTests/TestFloat16ScalarOperations.java" JTREG="TIMEOUT_FACTOR=8"

        Error Output
        ------------
        WARNING: Using incubator modules: jdk.incubator.vector
        ERROR: Equality matching failed: value mismatch: -2048 vs -2560
          aParent: <none>
          bParent: <none>
          field: <root>
          a: -2048
          b: -2560
        Exception in thread "main" compiler.lib.ir_framework.shared.TestRunException:

        Test Failures (1)
        -----------------
        Checked Test: @Check checkSNaNFP16ConstantPatterns - @Test: testSNaNFP16ConstantPatterns:
        compiler.lib.ir_framework.shared.TestRunException: There was an error while invoking @Check method public void TestFloat16ScalarOperations.checkSNaNFP16ConstantPatterns(short)
                at compiler.lib.ir_framework.test.CheckedTest.verify(CheckedTest.java:89)
                at compiler.lib.ir_framework.test.BaseTest.invokeTest(BaseTest.java:71)
                at compiler.lib.ir_framework.test.AbstractTest.run(AbstractTest.java:100)
                at compiler.lib.ir_framework.test.TestVM.runTests(TestVM.java:865)
                at compiler.lib.ir_framework.test.TestVM.start(TestVM.java:255)
                at compiler.lib.ir_framework.test.TestVM.main(TestVM.java:168)
        Caused by: java.lang.reflect.InvocationTargetException
                at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:119)
                at java.base/java.lang.reflect.Method.invoke(Method.java:565)
                at compiler.lib.ir_framework.test.CheckedTest.verify(CheckedTest.java:84)
                ... 5 more
        Caused by: compiler.lib.verify.VerifyException: Value verification failed:
        Value mismatch: -2048 vs -2560
                at compiler.lib.verify.Verify.checkEQimpl(Verify.java:191)
                at compiler.lib.verify.Verify.checkEQdispatch(Verify.java:134)
                at compiler.lib.verify.Verify.checkEQ(Verify.java:98)
                at TestFloat16ScalarOperations.checkSNaNFP16ConstantPatterns(TestFloat16ScalarOperations.java:382)
                at java.base/jdk.internal.reflect.DirectMethodHandleAccessor.invoke(DirectMethodHandleAccessor.java:104)
                ... 7 more



                at compiler.lib.ir_framework.test.TestVM.runTests(TestVM.java:901)
                at compiler.lib.ir_framework.test.TestVM.start(TestVM.java:255)
                at compiler.lib.ir_framework.test.TestVM.main(TestVM.java:168)

              Assignee:
              Hamlin Li
              Reporter:
              Fei Yang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: