8365206: RISC-V: compiler/c2/irTests/TestFloat16ScalarOperations.java is failing on riscv64

Reviewed-by: fyang, rehn, dzhang